--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,17 @@ name = "pygef"
 version = "0.13.0"
 description = "Parse soil measurument data."
 dependencies = ["polars>=1,<2", "lxml>=5,<7", "gef-file-to-map>=1,<2"]
-requires-python = ">=3.11,<3.14"
+requires-python = ">=3.11,<3.15"
 license = { file = "LICENSE.txt" }
 readme = "README.md"
 keywords = ["gef"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
 
 [project.urls]
 repository = "https://github.com/cemsbv/pygef"
@@ -29,7 +36,7 @@ lint = [
   # https://github.com/super-linter/super-linter/blob/main/dependencies/python/black.txt
   "black==25.1.0",
   # https://github.com/super-linter/super-linter/blob/main/dependencies/python/isort.txt
-  "isort==6.0.1",
+  "isort>=6.0.1",
 ]
 map = ["contextily>=1.3.0,<2"]
 
